# django-for-vue-practice

./: .flake8  README.md  pyproject.toml  requirements.txt
myproject/api/sample/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
myproject/api/sample/migrations/: 0001_initial.py
myproject/api/token/: apps.py  urls.py  views.py
myproject/common/: README_API_LOGGING.md  admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
myproject/common/management/commands/: cleanup_api_logs.py
myproject/common/migrations/: 0001_initial.py
myproject/config/: asgi.py  urls.py  wsgi.py
myproject/config/settings/: base.py
myproject/middlewares/: api_logging.py  current_user.py
myproject/myproject/: settings.py
references/: getting-user-id-with-jwt-async.md  getting-user-id-with-jwt.md  login-with-jwt.md
